syntax = "proto3";

package validatorstate;

import "google/protobuf/empty.proto";

option go_package = "github.com/luxfi/node/proto/pb/validatorstate";

service ValidatorState {
  // GetMinimumHeight returns the minimum height of the blocks in the optimal
  // proposal window.
  rpc GetMinimumHeight(google.protobuf.Empty) returns (GetMinimumHeightResponse);
  // GetCurrentHeight returns the current height of the P-chain.
  rpc GetCurrentHeight(google.protobuf.Empty) returns (GetCurrentHeightResponse);
  // GetSubnetID returns the subnetID of the provided chain.
  rpc GetSubnetID(GetSubnetIDRequest) returns (GetSubnetIDResponse);
  // GetValidatorSet returns the weights of the nodeIDs for the provided
  // subnet at the requested P-chain height.
  rpc GetValidatorSet(GetValidatorSetRequest) returns (GetValidatorSetResponse);
  // GetCurrentValidatorSet returns the current validators of the provided
  // subnet and the current P-chain height.
  rpc GetCurrentValidatorSet(GetCurrentValidatorSetRequest) returns (GetCurrentValidatorSetResponse);
}

message GetMinimumHeightResponse {
  uint64 height = 1;
}

message GetCurrentHeightResponse {
  uint64 height = 1;
}

message GetSubnetIDRequest {
  bytes chain_id = 1;
}

message GetSubnetIDResponse {
  bytes subnet_id = 1;
}

message GetValidatorSetRequest {
  uint64 height = 1;
  bytes subnet_id = 2;
}

message Validator {
  bytes node_id = 1;
  uint64 weight = 2;
  bytes public_key = 3;
  uint64 start_time = 4;
  bool is_active = 5;
  bytes validation_id = 6;
  uint64 min_nonce = 7;
  bool is_l1_validator = 8;
}

message GetValidatorSetResponse {
  repeated Validator validators = 1;
}

message GetCurrentValidatorSetRequest {
  bytes subnet_id = 1;
}

message GetCurrentValidatorSetResponse {
  repeated Validator validators = 1;
  uint64 current_height = 2;
}
